Modify birthday notes and background images
Updated birthday notes with new messages and styles.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="love-notes">
 <div class="note js-note" style="background-image: url('2.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat; padding: 20px; border-radius: 10px;">            <p class="note__text">
             <p style="color: #e63946; font-family: 'Brush Script MT', 'Lucida Handwriting', cursive; font-size: 32px; text-align: center;">
-  Feliz Aniverario BERTA,
+  FELIZ dia do...,
 </p>
 <p>
  Hoje é o teu dia 🎉, e não consigo deixar de sentir uma alegria imensa por poder celebrar ao teu lado🌟. 
@@ -36,7 +36,7 @@
 
  </div>
 </div>
-<div class="note js-note" style="background-image: url('2.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat; padding: 20px; border-radius: 10px;">            <div class="note__text" style="color: rgb(255, 127, 234);">
+<div class="note js-note" style="background-image: url('2.jpg1'); background-size: cover; background-position: center; background-repeat: no-repeat; padding: 20px; border-radius: 10px;">            <div class="note__text" style="color: rgb(255, 127, 234);">
               <p>  Hoje, desejo que o teu coração se encha de amor 💌, que cada instante seja repleto de sorrisos 😄 e que todos os teus sonhos encontrem caminhos para se realizar ✨.
 Mais do que desejar-te um feliz aniversário 🎂, quero te lembrar do quanto te amo 💕 e do quanto sou grato por cada segundo que passamos juntos ⏳. 
 
@@ -45,7 +45,7 @@ Mais do que desejar-te um feliz aniversário 🎂, quero te lembrar do quanto te
 
           </div>
        
-<div class="note js-note" style="background-image: url('2.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat; padding: 20px; border-radius: 10px;"><div class="note__text">
+<div class="note js-note" style="background-image: url('2.jpg1'); background-size: cover; background-position: center; background-repeat: no-repeat; padding: 20px; border-radius: 10px;"><div class="note__text">
             
 <p style="color: #ae0513; font-family: 'Brush Script MT', 'Lucida Handwriting', cursive; font-size: 28px; text-align: center;">   
   Feliz aniversário, meu amor 🎁. ❤️ &hearts;.</p>
