--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="envelop__false-sticker"></div>
       <div class="envelop__content js-envelop-content">
         <div class="love-notes">
-<div class="note js-note" style="background-image: url('2.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat; padding: 20px; border-radius: 10px;">            <p class="note__text">
+<div class="note js-note" style="background-image: url('2.jpg1'); background-size: cover; background-position: center; background-repeat: no-repeat; padding: 20px; border-radius: 10px;">            <p class="note__text">
             <p style="color: #e63946; font-family: 'Brush Script MT', 'Lucida Handwriting', cursive; font-size: 32px; text-align: center;">
   FELIZ dia do...,
 </p>
